test_regress/t/t_assert_seq_event_unsup.out
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:18:5: Unsupported: non-edge clocking event on a sequence; use an edge such as @(posedge clk)
                                                     : ... note: In instance 't'
   18 |     @(g) a ##1 b;
      |     ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
